@@ -1,3 +1,7 @@
+2010-06-17	Joel Sherrill <joel.sherrilL@OARcorp.com>
+
+	* sapi/include/confdefs.h: Remove RTEMS_COVERAGE conditionals.
+
 2010-06-17	Chris Johns <chrisj@rtems.org>
 
 	* libfs/src/rfs/rtems-rfs-bitmaps.h,
